Fix visibility issue for the dropdown

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -119,3 +119,11 @@ body {
 .quantity-input {
     width: 120px;
 }
+
+.show-element {
+    display: block;
+}
+
+.hide-element {
+    display: none;
+}
